--- a/relatorio.html
+++ b/relatorio.html
@@ -71,9 +71,10 @@
             <div class="row">
                 <div class="col-12">
                     <button type="button" class="btn btn-primary" onclick="gerarRelatorio()">Gerar Relatório</button>
+                    <button id="btnPDF" style="visibility: hidden;" type="button" class="btn btn-primary" onclick="gerarPDF()">Exportar para PDF</button>
+                    <button id="btnCSV" style="visibility: hidden;" type="button" class="btn btn-primary" onclick="gerarCSV()">Exportar para CSV</button>
                 </div>
             </div>
-
         </div>
 
         <!-- div do relatorio-->
